<resources>
    <string name="app_name">Puppy</string>
    <string name="favoritos">Favoritos</string>
    <string name="title_activity_favorite_list">FavoriteListActivity</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="enviar_comentario">Enviar Comentario</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="comentario">Comentario</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>
    <string name="bio_desarrollador">Estudiante de Coursera, nacido en la ciudad de Porlamar, Estado Nueva Esparta en el país de Venezuela, ha demostrado desde pequeño una alta curiosidad por la tecnología, no fue si no en sus estudios universitarios que conoció el desarrollo en Android e inicio el aprendizaje en dicha rama, actualmente se encuentra estudiando arduamente sobre el tema para volverse un maestro y construir muchas aplicaciones Android que ayuden al mundo</string>
    <string name="cargo_desarrollador">Cargo: Estudiante de Coursera</string>
    <string name="edad_desarrollador">Edad: 26</string>
    <string name="nombre_desarrollador">Ervin La Rosa</string>
    <string name="error_datos_correo">Por favor verifique los datos ingresados</string>
    <string name="message_success">Mensaje enviado exitosamente</string>
    <string name="message_error">Error de autenticación</string>
</resources>
